2012-12-28  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig.in: Accept GRUB_TERMINAL_OUTPUT=vga_text.
	Fixes Savannah bug #37821.

2012-12-28  Colin Watson  <cjwatson@ubuntu.com>

	Apply program name transformations at build-time rather than at
	run-time.  Fixes Debian bug #696465.

	* acinclude.m4 (grub_TRANSFORM): New macro.
	* configure.ac: Create output variables with transformed names for
	most programs.
	* util/bash-completion.d/grub-completion.bash.in: Use
	pre-transformed variables for program names.
	* util/grub-install.in: Likewise.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mkconfig_lib.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.
	* tests/util/grub-shell-tester.in: Remove unused assignment.
	* tests/util/grub-shell.in: Likewise.
	* util/grub.d/00_header.in: Likewise.

2012-12-28  Colin Watson  <cjwatson@ubuntu.com>

	Backport gnulib fixes for C11.  Fixes Savannah bug #37738.

	* grub-core/gnulib/stdio.in.h (gets): Warn on use only if
	HAVE_RAW_DECL_GETS.
	* m4/stdio_h.m4 (gl_STDIO_H): Check for gets.

2012-12-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Addmissing assignment to machine.
	Reported by: Eriks Latosheks <foresterlv>.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Network): Update instructions on generating netboot
	image.

2012-12-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c (grub_cmd_cryptomount): Strip brackets
	around device name if necessarry.

2012-12-10  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* util/grub-install.in: Follow the symbolic link parameter added
	to the file command.

2012-12-10  Andrey Borzenkov <arvidjaar@gmail.com>

	* util/grub-install.in: Remove stale TODO.
