@@ -1,3 +1,13 @@
+2012-12-30  Colin Watson  <cjwatson@ubuntu.com>
+
+	* grub-core/bus/usb/ehci.c (grub_ehci_pci_iter): Remove incorrect
+	__attribute__ ((unused)).
+	* grub-core/video/bochs.c (find_card): Likewise.
+	* grub-core/video/cirrus.c (find_card): Likewise.
+	* grub-core/video/radeon_fuloong2e.c (find_card): Likewise.
+	* grub-core/video/sis315pro.c (find_card): Likewise.
+	* grub-core/video/sm712.c (find_card): Likewise.
+
 2012-12-28  Colin Watson  <cjwatson@ubuntu.com>
 
 	* util/grub-mkconfig.in: Accept GRUB_TERMINAL_OUTPUT=vga_text.
